<resources>
    <string name="app_name">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="hint_title">Task Title</string>
    <string name="hint_description">Task Description</string>
    <string name="hint_label">Label Name (e.g. Work)</string>
    <string name="priority_prefix">Priority: </string>
    <string name="label_prefix">Label: </string>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="sort_by_label">Sort by Label</string>
    <string name="profile">Profile</string>
    <string name="filter_tasks">Filtrar Tareas</string>
    <item name="action_toggle_view" type="id"/>
</resources>
