<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_priority"
        android:title="@string/sort_by_priority"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_label"
        android:title="@string/sort_by_label"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:title="Filtrar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_theme"
        android:title="Modo Oscuro/Claro"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_profile"
        android:title="@string/profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        app:showAsAction="ifRoom" />

</menu>
