<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/etFechaPlazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fecha de plazo"
            android:inputType="date"
            android:focusable="false"/>

        <!-- Spinner para seleccionar la prioridad -->
        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <!-- EditText para el nombre de la etiqueta -->
        <EditText
            android:id="@+id/etLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label"
            android:layout_marginTop="8dp"/>

        <!-- Fila de selección de colores -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <View
                android:id="@+id/viewColorRed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/holo_red_light" />

            <View
                android:id="@+id/viewColorGreen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/holo_green_light" />

            <View
                android:id="@+id/viewColorBlue"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/holo_blue_light" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
